--- a/injury-analysis.Rmd
+++ b/injury-analysis.Rmd
@@ -11,7 +11,23 @@ library(tidyverse)
 ```
 
 # Reading in data
+The data used are as follows:
+
+  + Youth emergency visits among US children for sports-related brain injury from 2010-2016
+  + US annual average emergency department visits for all sports injuries 2010-2016
+  + US emergency department visits ages 5 to 24 from 2010 to 2016 by gender and activity
+  + Percent of concussions in US youth that play sports as of 2017
+  + Survey on the long-term effects of concussions in sports
+  + 
+  
 ```{r}
-youth_ed_visits <- read_csv("data/injury-data/ed-visits-among-us-children-for-sports-related-brain-injury-2010-2016-by-sport.csv")
+youth_ed_tbi_visits <- read_csv("data/injury-data/ed-visits-among-us-children-for-sports-related-brain-injury-2010-2016-by-sport.csv")
+general_ed_visits <- read_csv("data/injury-data/us-annual-average-emergency-department-visits-for-sports-injuries-2010-2016-by-age.csv")
+sport_ed_visits <- read_csv("data/injury-data/us-emergency-department-visits-ages-5-24-2010-2016-by-gender-and-activity.csv")
+num_conscussions_2017 <- read_csv("data/injury-data/number-of-concussions-suffered-by-us-youth-that-played-sports-as-of-2017-by-gender.csv")
+survey_tbi_effects <- read_csv("data/injury-data/survey-on-concussions-suffered-in-sports-and-long-term-brain-damage---effects-2014.csv")
+female_college_sports <- read_csv("data/injury-data/annual-number-of-us-college-female-sports-injuries-during-fall-season-2009-2014.csv")
+male_college_sports <- read_csv("data/injury-data/average-number-of-male-sports-injuries-during-us-college-fall-season-2009-2014.csv")
+avg_college_sports <- read_csv("data/injury-data/annual-number-of-college-sports-injuries-in-the-us-by-gender-2009-2014.csv")
 ```
 
