renamed and updated setup file

--- a/injury-analysis-2.Rmd
+++ b/injury-analysis-2.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Injury Analysis 2"
+title: "Injury Analysis Outline"
 author: "Carmen Canedo"
 date: "29 November 2020"
 output: html_notebook
