--- a/academics-analysis-part2.Rmd
+++ b/academics-analysis-part2.Rmd
@@ -50,7 +50,6 @@ geom_bar(stat="identity", width = 0.8, position=position_dodge(width = 0.8)) + t
 
 ggplot(data=percap.participation, aes(x=state, y=total.participation.percapita)) + theme_calc() + geom_bar(stat="identity", width = 0.6, fill = "dark green") + theme(axis.text=element_text(size=7, angle=45)) + ggtitle("Sports Participation (Per Capita) by State in 2019")
 
-
 ```
   
   
@@ -68,6 +67,18 @@ Sports.vs.SAT <- percap.participation %>%
   group_by(state) %>%
   summarise(tooktest.percapita = tooktest / Population, total.participation.percapita, avg_score, tooktest, Population)
 
+ggplot(data=Sports.vs.SAT, aes(x=state, y=tooktest.percapita)) + theme_stata() +
+  geom_bar(stat="identity", width = 0.6, fill = "orange") + theme(axis.text=element_text(size=7, angle=45)) + ggtitle("SAT Enrollment (Per Capita) by State in 2019")
+
+ggplot(data=Sports.vs.SAT, aes(x=state, y=avg_score)) + theme_stata() +
+  geom_bar(stat="identity", width = 0.6, fill = "light blue") + theme(axis.text=element_text(size=7, angle=45)) + ggtitle("SAT Average Total Score by State in 2019")
+
+```
+
+Here, for reference, we can observe the SAT enrollment per capita and average SAT score for each state in 2019.
+
+
+```{r echo=FALSE}
 Sports.vs.SAT %>%
   ggplot(aes(x = reorder(state, total.participation.percapita), y = tooktest.percapita)) + theme_calc() + geom_bar(stat="identity", width = 0.6, fill = "dark red") + theme(axis.text=element_text(size=7, angle=45)) + ggtitle("Sports Participation VS SAT Enrollment") + xlab("States from Least to Greatest in Sports Participation Per Capita")
 
